add pages and link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Hellafun Volcano Island Resort</h1>
-    <p>Let's put a slogan here.</p>
+    <h2>Let's put a slogan here.</h2>
+    <p><a href="accomodations.html">Accomodations</a></p>
+    <p><a href="activities.html">Activities</a></p>
+    <p><a href="travel.html">Travel Arrangements</a></p>
+    <p><a href="resort-pics.html">Resort Pictures</a></p>
+    </p>
   </body>
 </html>
