--- a/resort-pics.html
+++ b/resort-pics.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Very Real Photos of our Resort</title>
 </head>
 <body>
