add vacation photos

--- a/resort-pics.html
+++ b/resort-pics.html
@@ -6,6 +6,11 @@
 </head>
 <body>
   <p><em>Here are pictures of what you would expect to be here:</em></p>
+
+  <img src="img/Vacation.jpg" alt="First vacation photo">
+  <img src="img/big-resort.jpg" alt="Second vacation photo">
+  <img src="img/vaca-3.jpg" alt="Third vacation photo">
+
   <p><a href="index.html">Return to main page</a>.</p>
 </body>
 </html>
